fixed overflow issue and optimized design for smaller screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
 *{
     margin: 0;
-    overflow-x: hidden;
 }
 html{
     scroll-behavior: smooth;
@@ -37,6 +36,7 @@ h1{
     font-weight: 900;
     color: #fff;
     margin-left: 1rem;
+    width: 100%;
 }
 .nav-menu{
     display: flex;
@@ -219,7 +219,10 @@ h1{
     width: 100%;
 }
 
-@media (max-width: 1200px){
+@media (max-width: 900px){
+    *{
+        overflow-x: hidden;
+    }
     .hamburger{
         position: relative;
         visibility: visible;
@@ -235,7 +238,8 @@ h1{
         transform: translateY(-8px) rotate(-45deg);
     }
     .navbar{
-        gap: 3rem;
+        gap: 0rem;
+        padding: 0 1rem;
     }
     .nav-menu{
         flex-direction: column;
@@ -247,7 +251,7 @@ h1{
         gap: 2rem;
         top: 11%;
         left: -100%;
-        height: 100%;
+        height: 44%;
         text-align: center;
         transition: 0.3s;
     }
@@ -255,8 +259,9 @@ h1{
         left: 0;
     }
     #Home{
-        padding: 5rem 8rem;
+        padding: 5rem 3rem;
         display: block;
+        height:auto
     }
     .home-text{
         padding-top: 10%;
@@ -266,7 +271,7 @@ h1{
         width:100%
     }
     #About{
-        padding: 5rem 8rem;
+        padding: 5rem 3rem;
         text-align: center;
     }
     .about-text-img{
@@ -278,10 +283,10 @@ h1{
         padding: 2rem 0;
     }
     .about-img{
-        margin-left: 7.5rem;
+        width: 100%;
     }
     #Skills{
-        padding: 5rem 8rem;
+        padding: 5rem 2rem;
         text-align: center;
     }
     .skill-text-img{
@@ -295,7 +300,7 @@ h1{
     }
     
     #Projects{
-        padding: 5rem 8rem;
+        padding: 5rem 2rem;
     }
     .project-info{
         flex-direction: column;
@@ -310,18 +315,18 @@ h1{
         margin-left: 0;
     }
 
+    .projects{
+        gap: 8rem;
+    }
     #Socials{
         text-align: center;
-        padding: 5rem 8rem;
+        padding: 5rem 2rem;
     }
     .social-container{
         flex-direction: column;
     }
     .media-links{
         width: 100%;
-    }
-    .social-links{
-        padding-left: 11rem;
     }
     .mail-icon{
         display: none;
